[gd_scene load_steps=6 format=3 uid="uid://ox73gvasy7y0"]

[ext_resource type="Script" path="res://games/bomber_game/bomber_player.gd" id="1_xt1s7"]
[ext_resource type="Script" path="res://components_lab/player_component.gd" id="2_7o27b"]

[sub_resource type="BoxMesh" id="BoxMesh_c8drd"]
size = Vector3(0.4, 0.4, 0.4)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d2j0t"]
height = 0.5
radius = 0.24

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ybbc0"]
height = 0.5
radius = 0.32

[node name="BomberPlayer" type="CharacterBody3D"]
script = ExtResource("1_xt1s7")

[node name="PlayerComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_7o27b")

[node name="MeshInstance" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_c8drd")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_d2j0t")

[node name="PushArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape3D" parent="PushArea"]
shape = SubResource("CylinderShape3D_ybbc0")

[node name="BombHandler" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
